@@ -529,6 +529,7 @@ fi
 - splint annotationsm, signature cleanup.
 - drill ts/fi through verify mode, add methods to keep fi abstract.
 - use mmap when calculating file digests on verify, ~20% faster.
+- permit --dbpath and --root with signature (i.e. --import) modes.
 
 * Mon Sep 24 2001 Jeff Johnson <jbj@redhat.com>
 - Start rpm-4.1.
